fix some mobile overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 }
 
 .section-content {
-    @apply pt-2 pb-8 mb-8 grid text-center
+    @apply pt-2 pb-8 mb-8 grid text-center overflow-y-scroll
 }
 
 .section-content-floating {
@@ -35,7 +35,7 @@
 }
 
 .table-container {
-    @apply w-full text-center shadow-xl mt-4 bg-gray-200 dark:bg-gray-900 rounded-b-lg table-fixed
+    @apply w-full text-center shadow-xl mt-4 bg-gray-200 dark:bg-gray-900 rounded-b-lg table-auto
 }
 
 .table-title {
